@@ -80,6 +80,7 @@
 	* Added a summary of a plugin's flexform settings in the backend page module (shamelessly stolen from Georg Ringer's EXT:news)
 	* Added the javabin response writer in solrconfig.xml
 	* Changed tx_solr_indexqueue_Indexer::getAdditionalDocuments() to check whether the additionatl indexer returns additional documents
+	* Fixed multivalue field output using the MULTIVALUE view helper, credits Dmitri Ebert
 
 2012-02-13  Ingo Renner  <ingo.renner@dkd.de>
 
